package it.polimi.ingsw.model.player;

/**
 * The possible distinctive colors of a Player
 */
public enum PlayerColor {
    RED,
    BLUE,
    GREEN,
    YELLOW;
}