@startuml

!startsub GAME
skinparam linetype ortho
skinparam nodesep 250
skinparam ranksep 60

enum PlayerColor {
    RED,
    BLUE,
    GREEN,
    YELLOW,
}

class Game {
    - currentPlayer : Player
    + Game(players : List<String>)
}

class Player {
    - nickname : String {readOnly}
    - score : int
    + Player(nickname : String, color : Color)
    + getNickname() : String
    + getColor() : PlayerColor
    + getCardList() : List<Card>
    + getScore() : int
    + getField() : GameField
    + addCard(newCard : Card)
    + removeCard(idCard : int) : Card throw InvalidCardException
    + setScore(newScore : int) : int
}
'note top: getCardList() returns card in the same position used by removeCard()

Player -l-> PlayerColor : - color
Player -u-> ObjectiveCard : - secretObjective
Player --> "3" Card : - cardsInHand
Player -r-> GameField : -field

Game -d-* "2..4" Player : - players
Game -l-* "2" Deck : - goldenCardsDeck, resourceCardsDeck
Game --* "2" Card : - visibleGoldenCard
Game --* "2" Card : - visibleResourceCard
Game -r-o "2" ObjectiveCard : - commonObjectiveCards

!endsub

@enduml